--- a/Experience.html
+++ b/Experience.html
@@ -22,11 +22,12 @@
     <section id="experience">
         <h2>Experience</h2>
         <ul>
-            <li><strong>Social Media and Website Management</strong> - Sansic Music Production Company, Kathmandu, Nepal (2019-2022)</li>
-            <li><strong>Computer Lab Assistant</strong> - United Academy, Kathmandu, Nepal (2018-2019)</li>
-            <li><strong>Academic Tutor</strong> - Laligurans School, Godawari, Nepal (2014-2017)</li>
-            <li><strong>Customer Service Representative</strong> - Sodexo Food Service (2021)</li>
-            <li><strong>Troop Leader</strong> - Nepal Scouts (2016-2019)</li>
+            <li><strong>Comm Tech Consultants (X-Mobile 5G Wireless)</strong> - Information Technology Internship (2024)</li>
+            <li><strong>Cebridge Digital</strong>IT Support Specialist (2022-2024)
+            <li><strong>Catering Service Representative</strong> - Sodexo Food Service (2021)</li>
+            <li><strong>Sansic Music Production Company | Kathmandu, Nepal (2018-2019)</strong>
+            <li><strong>United Academy | Kathmandu, Nepal</strong> - Computer Lab Assistant (2019)</li>
+            <li><strong>Nepal Scouts</strong> - Troop Leader (2015-2018)</li>
         </ul>
     </section>
 
