--- a/Experience.html
+++ b/Experience.html
@@ -23,9 +23,9 @@
         <h2>Experience</h2>
         <ul>
             <li><strong>Comm Tech Consultants (X-Mobile 5G Wireless)</strong> - Information Technology Internship (2024)</li>
-            <li><strong>Cebridge Digital</strong>IT Support Specialist (2022-2024)
-            <li><strong>Catering Service Representative</strong> - Sodexo Food Service (2021)</li>
-            <li><strong>Sansic Music Production Company | Kathmandu, Nepal (2018-2019)</strong>
+            <li><strong>Cebridge Digital</strong> - IT Support Specialist (2022-2024)
+            <li><strong>Sodexo Food Service</strong> - Catering Service Representative (2021)</li>
+            <li><strong>Sansic Music Production Company | Kathmandu, Nepal</strong> -Social Media and Website Management (2018-2019)</li>
             <li><strong>United Academy | Kathmandu, Nepal</strong> - Computer Lab Assistant (2019)</li>
             <li><strong>Nepal Scouts</strong> - Troop Leader (2015-2018)</li>
         </ul>
